--- a/clients/package.json
+++ b/clients/package.json
@@ -11,13 +11,16 @@
     "eslint": "7.11.0",
     "eslint-plugin-react": "^7.26.1",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "html-react-parser": "^1.4.0",
     "lodash": "^4.17.21",
     "node-sass": "^6.0.1",
+    "pexels": "^1.3.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "^4.0.3",
     "react-smooth-dnd": "^0.11.1",
+    "unsplash-js": "^7.0.15",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
