--- a/clients/package.json
+++ b/clients/package.json
@@ -17,6 +17,7 @@
     "pexels": "^1.3.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.2",
+    "react-countdown": "^2.3.2",
     "react-dom": "^17.0.2",
     "react-scripts": "^4.0.3",
     "react-smooth-dnd": "^0.11.1",
