--- a/clients/package.json
+++ b/clients/package.json
@@ -19,6 +19,7 @@
     "react-bootstrap": "^2.0.2",
     "react-countdown": "^2.3.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.0.2",
     "react-scripts": "^4.0.3",
     "react-smooth-dnd": "^0.11.1",
     "unsplash-js": "^7.0.15",
