--- a/clients/package.json
+++ b/clients/package.json
@@ -7,6 +7,9 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "add": "^2.0.6",
+    "axios": "^0.24.0",
+    "axios-hooks": "^3.0.0",
     "bootstrap": "5.1.3",
     "eslint": "7.11.0",
     "eslint-plugin-react": "^7.26.1",
@@ -23,7 +26,8 @@
     "react-scripts": "^4.0.3",
     "react-smooth-dnd": "^0.11.1",
     "unsplash-js": "^7.0.15",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "yarn": "^1.22.17"
   },
   "scripts": {
     "start": "react-scripts start",
