--- a/clients/package.json
+++ b/clients/package.json
@@ -21,12 +21,15 @@
     "node-sass": "^6.0.1",
     "pexels": "^1.3.0",
     "react": "^17.0.2",
+    "react-alert": "^7.0.3",
+    "react-alert-template-basic": "^1.0.2",
     "react-bootstrap": "^2.0.2",
     "react-countdown": "^2.3.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.2",
     "react-scripts": "^4.0.3",
     "react-smooth-dnd": "^0.11.1",
+    "react-transition-group": "^4.4.2",
     "unsplash-js": "^7.0.15",
     "web-vitals": "^1.0.1",
     "xlsx": "^0.17.4",
