--- a/clients/package.json
+++ b/clients/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.2",
     "react-scripts": "^4.0.3",
+    "react-share": "^4.4.0",
     "react-smooth-dnd": "^0.11.1",
     "react-transition-group": "^4.4.2",
     "unsplash-js": "^7.0.15",
