--- a/clients/package.json
+++ b/clients/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "type": "module",
   "private": true,
+  "proxy" : "http://localhost:5000",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -10,7 +11,7 @@
     "add": "^2.0.6",
     "axios": "^0.24.0",
     "axios-hooks": "^3.0.0",
-    "bootstrap": "5.1.3",
+    "bootstrap": "^5.1.3",
     "eslint": "7.11.0",
     "eslint-plugin-react": "^7.26.1",
     "eslint-plugin-react-hooks": "^4.2.0",
