--- a/clients/.eslintrc.json
+++ b/clients/.eslintrc.json
@@ -1,56 +1,38 @@
 {
-    "env": {
-        "es6": true,
-        "node": true,
-        "browser": true
-    },
-    "extends": [
-        "eslint:recommended",
-        "plugin:react/recommended",
-        "plugin:react-hooks/recommended"
-    ],
-    "plugins": [
-        "react",
-        "react-hooks"
-    ],
-    "parserOptions": {
-        "ecmaVersion": 2018,
-        "sourceType": "module"
-    },
-    "rules": {
-        "react-hooks/rules-of-hooks": "error",
-        "react-hooks/exhaustive-deps": "warn",
-        "no-unused-vars": 1,
-        "no-trailing-spaces": 1,
-        "no-multi-spaces": 1,
-        "no-multiple-empty-lines": 1,
-        "space-before-blocks": [
-            "error",
-            "always"
-        ],
-        "object-curly-spacing": [
-            1,
-            "always"
-        ],
-        "indent": [
-            "warn",
-            4
-        ],
-        "linebreak-style": 0,
-        "semi": [
-            1,
-            "never"
-        ],
-        "quotes": [
-            "error",
-            "single"
-        ],
-        "no-unexpected-multiline": "warn",
-        "react/prop-types": 0,
-        "react/display-name": 0,
-        "keyword-spacing": 1,
-        "comma-dangle": 1,
-        "comma-spacing": 1,
-        "arrow-spacing": 1
-    }
+  "env": {
+    "es6": true,
+    "node": true,
+    "browser": true
+  },
+  "extends": [
+    "eslint:recommended",
+    "plugin:react/recommended",
+    "plugin:react-hooks/recommended"
+  ],
+  "plugins": ["react", "react-hooks"],
+  "parserOptions": {
+    "ecmaVersion": 2018,
+    "sourceType": "module"
+  },
+  "rules": {
+    "react-hooks/rules-of-hooks": "error",
+    "react-hooks/exhaustive-deps": "warn",
+    "no-unused-vars": 1,
+    "no-trailing-spaces": 1,
+    "no-multi-spaces": 1,
+    "no-multiple-empty-lines": 1,
+    "space-before-blocks": ["error", "always"],
+    "object-curly-spacing": [1, "always"],
+    "indent": ["warn", 4],
+    "linebreak-style": 0,
+    "semi": [1, "never"],
+    "quotes": ["warn", "single"],
+    "no-unexpected-multiline": "warn",
+    "react/prop-types": 0,
+    "react/display-name": 0,
+    "keyword-spacing": 1,
+    "comma-dangle": 1,
+    "comma-spacing": 1,
+    "arrow-spacing": 1
+  }
 }
