--- a/clients/package.json
+++ b/clients/package.json
@@ -18,6 +18,7 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "file-saver": "^2.0.5",
     "html-react-parser": "^1.4.0",
+    "js-cookie": "^3.0.1",
     "lodash": "^4.17.21",
     "mdbreact": "^5.1.0",
     "node-sass": "^6.0.1",
