--- a/clients/package.json
+++ b/clients/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.24.0",
     "axios-hooks": "^3.0.0",
     "bootstrap": "^5.1.3",
+    "elementz": "^2.0.5",
     "eslint": "7.11.0",
     "eslint-plugin-react": "^7.26.1",
     "eslint-plugin-react-hooks": "^4.2.0",
