--- a/clients/package.json
+++ b/clients/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "proxy": "http://localhost:5000",
   "dependencies": {
+    "@coreui/coreui": "^4.1.0",
     "@reduxjs/toolkit": "^1.6.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
