--- a/clients/package.json
+++ b/clients/package.json
@@ -34,6 +34,7 @@
     "react-bootstrap": "^2.0.2",
     "react-countdown": "^2.3.2",
     "react-dom": "^17.0.2",
+    "react-notifications-component": "^3.1.0",
     "react-redux": "^7.2.6",
     "react-router": "^6.0.2",
     "react-router-dom": "^6.0.2",
