--- a/clients/package.json
+++ b/clients/package.json
@@ -16,9 +16,11 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "add": "^2.0.6",
+    "admin-lte": "3.1",
     "axios": "^0.24.0",
     "axios-hooks": "^3.0.0",
     "bootstrap": "^5.1.3",
+    "chart.js": "^3.6.2",
     "elementz": "^2.0.5",
     "eslint": "7.11.0",
     "eslint-plugin-react": "^7.26.1",
@@ -43,6 +45,7 @@
     "react-share": "^4.4.0",
     "react-smooth-dnd": "^0.11.1",
     "react-spinners": "^0.11.0",
+    "react-tiny-fab": "^4.0.4",
     "react-transition-group": "^4.4.2",
     "simplebar-react": "^2.3.6",
     "unsplash-js": "^7.0.15",
