--- a/clients/package.json
+++ b/clients/package.json
@@ -36,6 +36,7 @@
     "react-alert": "^7.0.3",
     "react-alert-template-basic": "^1.0.2",
     "react-bootstrap": "^2.0.2",
+    "react-chartjs-2": "^4.0.0",
     "react-countdown": "^2.3.2",
     "react-dom": "^17.0.2",
     "react-notifications-component": "^3.1.0",
