--- a/clients/package.json
+++ b/clients/package.json
@@ -9,6 +9,8 @@
     "@coreui/icons": "^2.1.0",
     "@coreui/icons-react": "^2.0.0",
     "@coreui/react": "^4.1.0",
+    "@coreui/react-chartjs": "^2.0.0",
+    "@coreui/utils": "^1.3.1",
     "@reduxjs/toolkit": "^1.6.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -43,6 +45,7 @@
     "react-smooth-dnd": "^0.11.1",
     "react-spinners": "^0.11.0",
     "react-transition-group": "^4.4.2",
+    "simplebar-react": "^2.3.6",
     "unsplash-js": "^7.0.15",
     "web-vitals": "^1.0.1",
     "xlsx": "^0.17.4",
