--- a/clients/package.json
+++ b/clients/package.json
@@ -4,7 +4,6 @@
   "type": "module",
   "private": true,
   "proxy": "http://localhost:5050",
-  "homepage": "http://x2mint.github.io/x2mint",
   "dependencies": {
     "@coreui/coreui": "^4.1.0",
     "@coreui/icons": "^2.1.0",
@@ -49,6 +48,7 @@
     "react-smooth-dnd": "^0.11.1",
     "react-spinners": "^0.11.0",
     "react-tiny-fab": "^4.0.4",
+    "react-toastify": "^8.1.0",
     "react-transition-group": "^4.4.2",
     "simplebar-react": "^2.3.6",
     "unsplash-js": "^7.0.15",
