--- a/clients/package.json
+++ b/clients/package.json
@@ -5,6 +5,8 @@
   "private": true,
   "proxy": "http://localhost:5050",
   "dependencies": {
+    "@cloudinary/react": "^1.0.0-beta.14",
+    "@cloudinary/url-gen": "^1.3.0",
     "@coreui/coreui": "^4.1.0",
     "@coreui/icons": "^2.1.0",
     "@coreui/icons-react": "^2.0.0",
