--- a/clients/package.json
+++ b/clients/package.json
@@ -45,6 +45,7 @@
     "react-redux": "^7.2.6",
     "react-router": "^6.0.2",
     "react-router-dom": "^6.0.2",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "^4.0.3",
     "react-share": "^4.4.0",
     "react-smooth-dnd": "^0.11.1",
