--- a/clients/package.json
+++ b/clients/package.json
@@ -23,6 +23,7 @@
     "axios-hooks": "^3.0.0",
     "bootstrap": "^5.1.3",
     "chart.js": "^3.6.2",
+    "cloudinary": "^1.27.1",
     "elementz": "^2.0.5",
     "eslint": "7.11.0",
     "eslint-plugin-react": "^7.26.1",
@@ -32,6 +33,8 @@
     "js-cookie": "^3.0.1",
     "lodash": "^4.17.21",
     "mdbreact": "^5.1.0",
+    "multer": "^1.4.4",
+    "multer-storage-cloudinary": "^4.0.0",
     "node-sass": "^6.0.1",
     "pexels": "^1.3.0",
     "react": "^17.0.2",
