--- a/clients/package.json
+++ b/clients/package.json
@@ -5,45 +5,33 @@
   "private": true,
   "proxy": "http://localhost:5050",
   "dependencies": {
-    "@cloudinary/react": "^1.0.0-beta.14",
-    "@cloudinary/url-gen": "^1.3.0",
-    "@coreui/coreui": "^4.1.0",
-    "@coreui/icons": "^2.1.0",
-    "@coreui/icons-react": "^2.0.0",
-    "@coreui/react": "^4.1.0",
-    "@coreui/react-chartjs": "^2.0.0",
-    "@coreui/utils": "^1.3.1",
     "@reduxjs/toolkit": "^1.6.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "add": "^2.0.6",
-    "admin-lte": "3.1",
     "axios": "^0.24.0",
-    "axios-hooks": "^3.0.0",
     "bootstrap": "^5.1.3",
     "chart.js": "^3.6.2",
-    "cloudinary": "^1.27.1",
-    "elementz": "^2.0.5",
     "eslint": "7.11.0",
     "eslint-plugin-react": "^7.26.1",
     "eslint-plugin-react-hooks": "^4.2.0",
     "file-saver": "^2.0.5",
     "html-react-parser": "^1.4.0",
+    "immer": "^9.0.7",
     "js-cookie": "^3.0.1",
     "lodash": "^4.17.21",
     "mdbreact": "^5.1.0",
-    "multer": "^1.4.4",
-    "multer-storage-cloudinary": "^4.0.0",
     "node-sass": "^6.0.1",
     "pexels": "^1.3.0",
     "react": "^17.0.2",
-    "react-alert": "^7.0.3",
-    "react-alert-template-basic": "^1.0.2",
     "react-bootstrap": "^2.0.2",
     "react-chartjs-2": "^4.0.0",
     "react-countdown": "^2.3.2",
     "react-dom": "^17.0.2",
+    "react-easyfullscreen": "^1.1.1",
+    "react-error-overlay": "^6.0.10",
+    "react-full-screen": "^1.1.0",
     "react-google-login": "^5.2.2",
     "react-notifications-component": "^3.1.0",
     "react-redux": "^7.2.6",
@@ -57,7 +45,6 @@
     "react-tiny-fab": "^4.0.4",
     "react-toastify": "^8.1.0",
     "react-transition-group": "^4.4.2",
-    "simplebar-react": "^2.3.6",
     "unsplash-js": "^7.0.15",
     "web-vitals": "^1.0.1",
     "xlsx": "^0.17.4",
