--- a/clients/package.json
+++ b/clients/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "proxy": "http://localhost:5050",
   "dependencies": {
+    "@auth0/auth0-react": "^1.8.0",
     "@reduxjs/toolkit": "^1.6.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -36,7 +37,7 @@
     "react-notifications-component": "^3.1.0",
     "react-redux": "^7.2.6",
     "react-router": "^6.0.2",
-    "react-router-dom": "^6.0.2",
+    "react-router-dom": "^6.2.1",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "^4.0.3",
     "react-share": "^4.4.0",
@@ -45,6 +46,7 @@
     "react-tiny-fab": "^4.0.4",
     "react-toastify": "^8.1.0",
     "react-transition-group": "^4.4.2",
+    "react-use-googlelogin": "^0.12.5",
     "unsplash-js": "^7.0.15",
     "web-vitals": "^1.0.1",
     "xlsx": "^0.17.4",
