--- a/clients/package.json
+++ b/clients/package.json
@@ -5,14 +5,8 @@
   "private": true,
   "proxy": "http://localhost:5050",
   "dependencies": {
-    "@auth0/auth0-react": "^1.8.0",
     "@reduxjs/toolkit": "^1.6.2",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "add": "^2.0.6",
     "axios": "^0.24.0",
-    "bootstrap": "^5.1.3",
     "chart.js": "^3.6.2",
     "eslint": "7.11.0",
     "eslint-plugin-react": "^7.26.1",
@@ -30,11 +24,7 @@
     "react-chartjs-2": "^4.0.0",
     "react-countdown": "^2.3.2",
     "react-dom": "^17.0.2",
-    "react-easyfullscreen": "^1.1.1",
-    "react-error-overlay": "^6.0.10",
-    "react-full-screen": "^1.1.0",
     "react-google-login": "^5.2.2",
-    "react-notifications-component": "^3.1.0",
     "react-redux": "^7.2.6",
     "react-router": "^6.0.2",
     "react-router-dom": "^6.2.1",
@@ -46,8 +36,6 @@
     "react-tiny-fab": "^4.0.4",
     "react-toastify": "^8.1.0",
     "react-transition-group": "^4.4.2",
-    "react-use-googlelogin": "^0.12.5",
-    "unsplash-js": "^7.0.15",
     "web-vitals": "^1.0.1",
     "xlsx": "^0.17.4",
     "yarn": "^1.22.17"
@@ -57,9 +45,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "eslint": "eslint src",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eslint": "eslint src"
   },
   "eslintConfig": {
     "extends": [
