--- a/clients/package.json
+++ b/clients/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.6.2",
     "axios": "^0.24.0",
+    "bootstrap": "^5.1.3",
     "chart.js": "^3.6.2",
     "eslint": "7.11.0",
     "eslint-plugin-react": "^7.26.1",
