--- a/clients/package.json
+++ b/clients/package.json
@@ -6,6 +6,7 @@
   "proxy": "http://localhost:5050",
   "dependencies": {
     "@reduxjs/toolkit": "^1.6.2",
+    "aos": "^3.0.0-beta.6",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "chart.js": "^3.6.2",
