--- a/clients/.eslintrc.json
+++ b/clients/.eslintrc.json
@@ -16,7 +16,7 @@
   },
   "rules": {
     "react-hooks/rules-of-hooks": "error",
-    "react-hooks/exhaustive-deps": "warn",
+    "react-hooks/exhaustive-deps": "off",
     "no-unused-vars": 1,
     "no-trailing-spaces": 1,
     "no-multi-spaces": 1,
