add FB chat plugin

--- a/clients/package.json
+++ b/clients/package.json
@@ -15,6 +15,7 @@
     "eslint-plugin-react": "^7.26.1",
     "eslint-plugin-react-hooks": "^4.2.0",
     "file-saver": "^2.0.5",
+    "firebase": "^9.6.2",
     "html-react-parser": "^1.4.0",
     "immer": "^9.0.7",
     "js-cookie": "^3.0.1",
@@ -28,6 +29,7 @@
     "react-countdown": "^2.3.2",
     "react-dom": "^17.0.2",
     "react-google-login": "^5.2.2",
+    "react-messenger-customer-chat": "^0.8.0",
     "react-redux": "^7.2.6",
     "react-router": "^6.2.1",
     "react-router-dom": "^6.2.1",
