--- a/clients/package.json
+++ b/clients/package.json
@@ -28,6 +28,7 @@
     "react-chartjs-2": "^4.0.0",
     "react-countdown": "^2.3.2",
     "react-dom": "^17.0.2",
+    "react-error-overlay": "^6.0.9",
     "react-google-login": "^5.2.2",
     "react-messenger-customer-chat": "^0.8.0",
     "react-redux": "^7.2.6",
@@ -45,6 +46,9 @@
     "xlsx": "^0.17.4",
     "yarn": "^1.22.17"
   },
+  "resolutions": {
+    "react-error-overlay": "6.0.9"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -53,6 +57,10 @@
     "eslint": "eslint src"
   },
   "eslintConfig": {
+    "env": {
+      "browser": true,
+      "node": true
+    },
     "extends": [
       "react-app",
       "react-app/jest"
