fix edit contest url

--- a/clients/package.json
+++ b/clients/package.json
@@ -43,6 +43,7 @@
     "react-tiny-fab": "^4.0.4",
     "react-toastify": "^8.1.0",
     "react-transition-group": "^4.4.2",
+    "vietnamese-slug": "^1.1.4",
     "web-vitals": "^1.0.1",
     "xlsx": "^0.17.4",
     "yarn": "^1.22.17"
