--- a/clients/package.json
+++ b/clients/package.json
@@ -32,6 +32,7 @@
     "react-error-overlay": "^6.0.9",
     "react-google-login": "^5.2.2",
     "react-messenger-customer-chat": "^0.8.0",
+    "react-player": "^2.10.1",
     "react-redux": "^7.2.6",
     "react-router": "^6.2.1",
     "react-router-dom": "^6.2.1",
